--- a/assets/style/stylePrint.css
+++ b/assets/style/stylePrint.css
@@ -1,5 +1,18 @@
 .myImgList {
-  width: 50px;
+  width: 150px;
+  margin: 0 auto;
+}
+.a4 {
+  background: white;
+  width: 21cm;
+  height: 29.7cm;
+  display: block;
+  margin: 0 auto;
+  margin-bottom: 0.5cm;
+}
+.row {
+  width: 100%;
+  font-size: 1.5rem;
 }
 .col-1,
 .col-2,
